Bug 109979 - The Plot is not centered
Summary: The Plot is not centered
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.3.1
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-08-01 23:00 UTC by Alessandro Garberi
Modified: 2005-08-15 14:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alessandro Garberi 2005-08-01 23:00:09 UTC
Version:           1.3.1 (using KDE KDE 3.4.2)
Installed from:    Slackware Packages
OS:                Linux

In the "Plot Data" window.
When a graph is drawn, the rectangle containing the points is no more centered, but is moved towards the right side.
Comment 1 cniehaus 2005-08-01 23:20:15 UTC
I can confirm this for latest svn. The right y-axis is out of the black 
widget. I bet this is a layout problem. Pino: Could you have a look?
Comment 2 Pino Toscano 2005-08-15 14:27:38 UTC
SVN commit 449410 by pino:

Take the space for the y axis label.

CCBUG: 109979


 M  +1 -0      elementdataviewer.cpp  


--- branches/KDE/3.4/kdeedu/kalzium/src/elementdataviewer.cpp #449409:449410
@@ -45,6 +45,7 @@
 	QVBoxLayout *vlay = new QVBoxLayout(hlay, 0 );
 	m_pPlotSetupWidget = new PlotSetupWidget( page, "psw" );	
 	m_pPlotWidget = new PlotWidget( 0.0,12.0,0.0,22.0, page, "plotwidget" );
+	m_pPlotWidget->setYAxisLabel(" ");
 
 	hlay->addWidget( m_pPlotSetupWidget );
 	vlay->addWidget( m_pPlotWidget);
Comment 3 Pino Toscano 2005-08-15 14:28:54 UTC
SVN commit 449411 by pino:

Take the space for the y axis label.

BUG: 109979


 M  +1 -0      elementdataviewer.cpp  


--- branches/KDE/3.5/kdeedu/kalzium/src/elementdataviewer.cpp #449410:449411
@@ -47,6 +47,7 @@
 	m_pPlotSetupWidget->from->setMaxValue( d->numberOfElements() - 1 );
 	m_pPlotSetupWidget->to->setMaxValue( d->numberOfElements() );
 	m_pPlotWidget = new PlotWidget( 0.0, 12.0 ,0.0 ,22.0, plainPage(), "plotwidget" );
+	m_pPlotWidget->setYAxisLabel(" ");
 	m_pPlotWidget->setMinimumWidth( 200 );
 	m_pPlotWidget->resize( 400, m_pPlotWidget->height() );