Take the space for the y axis label.

BUG: 109979

svn path=/branches/KDE/3.5/kdeedu/kalzium/; revision=449411